--- a/AndroidBootstrap/AndroidManifest.xml
+++ b/AndroidBootstrap/AndroidManifest.xml
@@ -11,8 +11,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name="com.beardedhen.androidbootstrap.MainActivity"
             android:label="@string/app_name" >
