--- a/AndroidBootstrap/build.gradle
+++ b/AndroidBootstrap/build.gradle
@@ -1,8 +1,9 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+	compileSdkVersion 19
+	buildToolsVersion "20.0.0"
+
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 17
