--- a/AndroidBootstrapTest/build.gradle
+++ b/AndroidBootstrapTest/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion "20.0.0"
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 17
