--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,11 @@ buildscript {
         classpath 'com.android.tools.build:gradle:0.12.+'
     }
 }
+
+allprojects {
+    version = VERSION_NAME
+    group = GROUP
+    repositories {
+        mavenCentral()
+    }
+}
