--- a/AndroidBootstrapTest/build.gradle
+++ b/AndroidBootstrapTest/build.gradle
@@ -1,13 +1,12 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
-    compile project(':AndroidBootstrap')
+    compile 'com.android.support:support-v4:21.0.0'
     compile project(':AndroidBootstrap')
 }
 
 android {
-    compileSdkVersion 18
+    compileSdkVersion 21
     buildToolsVersion "20.0.0"
 
     sourceSets {
@@ -21,15 +20,7 @@ android {
             assets.srcDirs = ['assets']
         }
 
-        // Move the tests to tests/java, tests/res, etc...
         instrumentTest.setRoot('tests')
-
-        // Move the build types to build-types/<type>
-        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
-        // This moves them out of them default location under src/<type>/... which would
-        // conflict with src/ being used by the main source set.
-        // Adding new build types or product flavors should be accompanied
-        // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
     }
