--- a/AndroidBootstrap/AndroidManifest.xml
+++ b/AndroidBootstrap/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.beardedhen.androidbootstrap"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    >
 
     <uses-sdk
         android:minSdkVersion="7"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="21"
+        />
 
-    <application/>
+    <application />
 
 </manifest>
