--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.example.sample"
-          xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    package="com.example.sample"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
     <application
@@ -10,16 +11,36 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".LandingPageActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
             >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BootstrapButtonExample"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            />
+        <activity
+            android:name=".BootstrapLabelExample"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            />
+        <activity
+            android:name=".FontAwesomeTextExample"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            />
+        <activity
+            android:name=".BootstrapProgressExample"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            />
     </application>
 
 </manifest>
