--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,4 +28,5 @@ android {
 dependencies {
     compile project (':AndroidBootstrap')
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:appcompat-v7:22.2.0'
 }
