--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".BootstrapButtonGroupExample"
             android:label="BootstrapButtonGroup"
             />
+        <activity
+            android:name=".BootstrapCircleThumbnailExample"
+            android:label="BootstrapCircleThumbnail"
+            />
     </application>
 
 </manifest>
