add full data for typicon set

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -30,4 +31,9 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:22.2.0'
+
+    // Testing
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 }
