--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="com.example.sample"
+    package="com.fractalwrench.androidbootstrap.sample"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
     <application
-        android:name=".SampleApplication"
+        android:name="com.fractalwrench.androidbootstrap.sample.SampleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name=".HomeActivity"
+            android:name="com.fractalwrench.androidbootstrap.sample.HomeActivity"
             android:label="Android Bootstrap Examples"
             >
             <intent-filter>
@@ -21,39 +21,39 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BootstrapButtonExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapButtonExample"
             android:label="BootstrapButton"
             />
         <activity
-            android:name=".BootstrapLabelExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapLabelExample"
             android:label="BootstrapLabel"
             />
         <activity
-            android:name=".AwesomeTextViewExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.AwesomeTextViewExample"
             android:label="AwesomeTextView"
             />
         <activity
-            android:name=".BootstrapProgressBarExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapProgressBarExample"
             android:label="BootstrapProgressBar"
             />
         <activity
-            android:name=".BootstrapButtonGroupExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapButtonGroupExample"
             android:label="BootstrapButtonGroup"
             />
         <activity
-            android:name=".BootstrapCircleThumbnailExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapCircleThumbnailExample"
             android:label="BootstrapCircleThumbnail"
             />
         <activity
-            android:name=".BootstrapThumbnailExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapThumbnailExample"
             android:label="BootstrapThumbnail"
             />
         <activity
-            android:name=".BootstrapEditTextExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapEditTextExample"
             android:label="BootstrapEditTextExample"
             />
         <activity
-            android:name=".BootstrapInputGroupExample"
+            android:name="com.fractalwrench.androidbootstrap.sample.BootstrapInputGroupExample"
             android:label="BootstrapInputGroupExample"
             />
     </application>
