--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
-VERSION_NAME=1.2.3
-VERSION_CODE=123
+VERSION_NAME=2.0.0
+VERSION_CODE=200
 GROUP=com.beardedhen
 
-POM_DESCRIPTION=Bootstrap style buttons with Font Awesome
+POM_DESCRIPTION=Bootstrap style widgets for Android, with Glyph Icons
 POM_URL=https://github.com/Bearded-Hen/Android-Bootstrap
 POM_SCM_URL=https://github.com/Bearded-Hen/Android-Bootstrap
 POM_SCM_CONNECTION=scm:git@github.com:Bearded-Hen/Android-Bootstrap.git
