--- a/AndroidBootstrap/build.gradle
+++ b/AndroidBootstrap/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+apply from: 'push.gradle'
 
 android {
     compileSdkVersion 23
