--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,16 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    repositories {
-        maven {
-            url "https://jitpack.io" // for snapshot debugging
-        }
-    }
 }
 
 dependencies {
-    compile project (':AndroidBootstrap') // replace with Maven dependency in your app
-//    compile 'com.github.fractalwrench:Android-Bootstrap:-SNAPSHOT'
+//    compile project (':AndroidBootstrap') // replace with Maven dependency in your app
+    compile 'com.github.fractalwrench:Android-Bootstrap:-SNAPSHOT'
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
