--- a/AndroidBootstrap/build.gradle
+++ b/AndroidBootstrap/build.gradle
@@ -15,4 +15,5 @@ android {
 
 dependencies {
     compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
