added BootstrapProgressbarGroup, to allow for stacked progressbars"

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -68,6 +68,11 @@
             android:name=".BootstrapAlertExample"
             android:label="BootstrapAlertExample"
             />
+
+        <activity
+            android:name=".BootstrapProgressBarGroupExample"
+            android:label="BootstrapProgressBarGroupExample"
+            />
     </application>
 
 </manifest>
