update gradle dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,9 @@ VERSION_NAME=2.3.0
 VERSION_CODE=230
 GROUP=com.beardedhen
 
+MIN_SDK_INT=14
+TARGET_SDK_INT=25
+
 POM_DESCRIPTION=Bootstrap style widgets for Android, with Glyph Icons
 POM_URL=https://github.com/Bearded-Hen/Android-Bootstrap
 POM_SCM_URL=https://github.com/Bearded-Hen/Android-Bootstrap
