--- a/AndroidBootstrap/build.gradle
+++ b/AndroidBootstrap/build.gradle
@@ -2,18 +2,18 @@ apply plugin: 'com.android.library'
 apply from: 'push.gradle'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion Integer.parseInt(TARGET_SDK_INT)
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion Integer.parseInt(MIN_SDK_INT)
+        targetSdkVersion Integer.parseInt(TARGET_SDK_INT)
         versionCode = Integer.parseInt(VERSION_CODE)
         versionName = VERSION_NAME
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-annotations:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:support-annotations:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
 }
