--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
@@ -12,7 +13,7 @@ allprojects {
     version = VERSION_NAME
     group = GROUP
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             url "https://jitpack.io" // for snapshot debugging
         }
